// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCoursesPageComponent should snap when archived courses are expanded 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded={[Function Boolean]}
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header bg-info text-white cursor-pointer"
        id="archived-table-heading"
      >
        <b>
          Archive
        </b>
        <div
          class="card-header-btn-toolbar"
        >
          <tm-panel-chevron>
            <div
              class="chevron"
            >
              
              
              <i
                class="fas fa-chevron-up"
              />
            </div>
          </tm-panel-chevron>
        </div>
      </div>
      
      <div
        class="card-body archive-body table-responsive ng-trigger ng-trigger-collapseAnim ng-animating"
        style=""
      >
        <table
          class="table table-striped table-bordered archive-table"
          id="archived-courses-table"
        >
          <thead>
            <tr
              class="background-color-medium-gray text-color-gray"
            >
              <th
                class="sortable-header"
              >
                 Course ID 
                <span
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  
                  
                </span>
              </th>
              <th
                class="sortable-header"
              >
                 Course Name 
                <span
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  
                  
                  <i
                    class="fas fa-sort-up"
                    style=""
                  />
                </span>
              </th>
              <th
                class="sortable-header"
              >
                 Creation Date 
                <span
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  
                  
                </span>
              </th>
              <th
                class="text-center"
              >
                Action(s)
              </th>
            </tr>
          </thead>
          <tbody>
            
            <tr
              style=""
            >
              <td
                class="text-break"
                id="archived-course-id-0"
              >
                CS2104
              </td>
              <td
                class="text-break"
              >
                Can modify archived
              </td>
              <td>
                <span
                  class="ngb-tooltip-class"
                  container="body"
                >
                  5 Nov 2002
                </span>
              </td>
              <td
                class="text-center actions-cell"
              >
                <button
                  class="btn btn-light btn-sm"
                  id="btn-unarchive-0"
                >
                   Unarchive 
                </button>
                
                <button
                  class="btn btn-light btn-sm"
                  id="btn-soft-delete-archived-0"
                  ngbtooltip="Delete the course and its corresponding students and sessions"
                >
                   Delete 
                </button>
                
                
              </td>
            </tr>
            <tr
              style=""
            >
              <td
                class="text-break"
                id="archived-course-id-1"
              >
                CS2106
              </td>
              <td
                class="text-break"
              >
                Cannot modify archived
              </td>
              <td>
                <span
                  class="ngb-tooltip-class"
                  container="body"
                >
                  5 Nov 2002
                </span>
              </td>
              <td
                class="text-center actions-cell"
              >
                <button
                  class="btn btn-light btn-sm"
                  id="btn-unarchive-1"
                >
                   Unarchive 
                </button>
                
                
                <button
                  class="btn btn-light btn-sm disabled"
                  id="btn-soft-delete-archived-disabled-1"
                >
                   Delete 
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when courses are still loading 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when it is undeletable and unrestorable 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll="false"
  canRestoreAll="false"
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <div>
      
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td
                  class="text-break"
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td
                  class="text-break"
                >
                  Modifiable Students and Courses
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     5 Nov 2018 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  
                  
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-copy-0"
                        ngbtooltip="Copy the course and its corresponding sessions"
                        placement="left"
                      >
                         Copy 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                      
                      
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="text-break"
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td
                  class="text-break"
                >
                  Nothing modifiable
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     2 Feb 2019 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            
          </table>
          
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header bg-info text-white cursor-pointer"
        id="archived-table-heading"
      >
        <b>
          Archive
        </b>
        <div
          class="card-header-btn-toolbar"
        >
          <tm-panel-chevron>
            <div
              class="chevron"
            >
              
              <i
                class="fas fa-chevron-down"
              />
              
            </div>
          </tm-panel-chevron>
        </div>
      </div>
      
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h3
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h3>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-secondary text-white cursor-pointer"
          id="deleted-table-heading"
        >
          <b>
            Recycle Bin
          </b>
          <div
            class="card-header-btn-toolbar"
          >
            
            
            <button
              class="btn btn-secondary btn-sm disabled"
            >
              <i
                class="fas fa-check"
              />
               Restore All 
            </button>
            
            
            <button
              class="btn btn-secondary btn-sm disabled"
            >
              <i
                class="fas fa-times"
              />
               Delete All 
            </button>
            <tm-panel-chevron>
              <div
                class="chevron"
              >
                
                <i
                  class="fas fa-chevron-down"
                />
                
              </div>
            </tm-panel-chevron>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when new course form is expanded 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded={[Function Boolean]}
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><div
    class="course-section ng-trigger ng-trigger-collapseAnim ng-animating"
    id="add-course-section"
    style=""
  >
    <tm-add-course-form>
      <div
        class="card border-primary fill-plain"
      >
        <div
          class="close-header"
        >
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <div
              class="row align-items-center"
            >
              <div
                class="col-md-6"
              >
                <h5
                  class="text-center"
                >
                  Create new Course
                </h5>
              </div>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="row text-center align-items-center mt-1"
            >
              <div
                class="col-md-3"
              >
                <h5
                  class="text-md-right"
                >
                  Or: 
                </h5>
              </div>
              <div
                class="col-md-9 text-md-left"
              >
                <button
                  class="btn btn-info"
                  id="btn-copy-course"
                  type="button"
                >
                  
                   Copy from previous courses 
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-body text-center"
        >
          <div
            class="form-group row"
          >
            <label
              class="col-md-3 text-md-right col-form-label"
            >
              Course ID:
            </label>
            <div
              class="col-md-6 text-md-left"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="new-course-id"
                maxlength="64"
                placeholder="e.g. CS3215-2013Semester1"
                type="text"
              />
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-md-3 text-md-right col-form-label"
            >
              Course Name:
            </label>
            <div
              class="col-md-6 text-md-left"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="new-course-name"
                maxlength="80"
                placeholder="e.g. Software Engineering"
                type="text"
              />
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-md-3 text-md-right col-form-label ngb-tooltip-class"
            >
              <span
                ngbtooltip="You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
              >
                 Time Zone:
              </span>
            </label>
            <div
              class="col-md-6 text-md-left"
            >
              <div
                class="input-group"
              >
                <select
                  class="form-control ng-untouched ng-pristine ng-valid"
                  id="new-time-zone"
                >
                  
                  <option
                    style=""
                    value="Jamaica"
                  >
                    Jamaica (UTC -05:00)
                  </option>
                  <option
                    style=""
                    value="Portugal"
                  >
                    Portugal (UTC)
                  </option>
                  <option
                    style=""
                    value="Singapore"
                  >
                    Singapore (UTC +08:00)
                  </option>
                  <option
                    style=""
                    value="Turkey"
                  >
                    Turkey (UTC +03:00)
                  </option>
                </select>
                <span
                  class="input-group-btn"
                  style="margin-left: 5px;"
                >
                  <button
                    class="btn btn-primary btn-margin-left"
                  >
                    Auto Detect
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-md-9 offset-md-3 text-md-left"
            >
              <button
                class="btn btn-success"
                id="btn-save-course"
              >
                
                 Add Course 
              </button>
            </div>
          </div>
        </div>
      </div>
    </tm-add-course-form>
  </div><tm-loading-retry>
    
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with all courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <div>
      
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td
                  class="text-break"
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td
                  class="text-break"
                >
                  Modifiable Students and Courses
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     5 Nov 2018 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  
                  
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-copy-0"
                        ngbtooltip="Copy the course and its corresponding sessions"
                        placement="left"
                      >
                         Copy 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                      
                      
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="text-break"
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td
                  class="text-break"
                >
                  Nothing modifiable
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     2 Feb 2019 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            
          </table>
          
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header bg-info text-white cursor-pointer"
        id="archived-table-heading"
      >
        <b>
          Archive
        </b>
        <div
          class="card-header-btn-toolbar"
        >
          <tm-panel-chevron>
            <div
              class="chevron"
            >
              
              <i
                class="fas fa-chevron-down"
              />
              
            </div>
          </tm-panel-chevron>
        </div>
      </div>
      
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h3
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h3>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-secondary text-white cursor-pointer"
          id="deleted-table-heading"
        >
          <b>
            Recycle Bin
          </b>
          <div
            class="card-header-btn-toolbar"
          >
            
            <button
              class="btn btn-secondary btn-sm"
              id="btn-restore-all"
              ngbtooltip="Restore all deleted courses and their corresponding students and sessions"
            >
              <i
                class="fas fa-check"
              />
               Restore All 
            </button>
            
            
            
            <button
              class="btn btn-secondary btn-sm"
              id="btn-delete-all"
              ngbtooltip="Permanently delete all courses and their corresponding students and sessions"
            >
              <i
                class="fas fa-times"
              />
               Delete All 
            </button>
            
            
            <tm-panel-chevron>
              <div
                class="chevron"
              >
                
                <i
                  class="fas fa-chevron-down"
                />
                
              </div>
            </tm-panel-chevron>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with default fields 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with no courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <div>
      
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td
                  class="text-break"
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td
                  class="text-break"
                >
                  Modifiable Students and Courses
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     5 Nov 2018 
                  </span>
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                      id="show-statistics-0"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  
                  
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-copy-0"
                        ngbtooltip="Copy the course and its corresponding sessions"
                        placement="left"
                      >
                         Copy 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                      
                      
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="text-break"
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td
                  class="text-break"
                >
                  Nothing modifiable
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     2 Feb 2019 
                  </span>
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                      id="show-statistics-1"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            
          </table>
          
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;
